change to work on JDK8